# protocol_bytes

./: Cargo.toml  README.md
docs/: custom_evm.md
examples/: basefee_constraints.rs  custom_evm.rs
excalidraw/: eth_validator.excalidraw
excalidraw/reth/: db.excalidraw  engine.excalidraw  fee.excalidraw  node.excalidraw  node_cli.excalidraw  pool.excalidraw  transaction.excalidraw
src/: lib.rs
